--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ string(APPEND CMAKE_CXX_FLAGS " -Wshadow -Wnon-virtual-dtor")
 hunter_add_package(GTest)
 find_package(GTest CONFIG REQUIRED)
 hunter_add_package(nlohmann_json)
-find_package(nlohmann_json CONFIG REQUIRED
+find_package(nlohmann_json CONFIG REQUIRED)
 
 add_library(lab-01 STATIC
   # enum your files and delete this comment
